# ongleam.study.architecture-patterns-with-python

./: .gitignore  Architecture-Patterns-with-Python.md  CLAUDE.md  Dockerfile  Makefile  NOTE.md  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  split_chapters.py
assets/markdown/: 00-preface.md  appendix-b-project-structure.md  appendix-c-csv-infrastructure.md  ch05-tdd-high-low-gear.md  ch06-unit-of-work.md  ch07-aggregates.md  ch10-commands-command-handler.md  ch11-event-driven-microservices.md  ch13-dependency-injection.md  epilogue.md
examples/ch03/: filesystem.py  sync.py  test_sync.py
markdown/: 00-frontmatter.md  00-introduction.md  appendix-a-summary.md  appendix-d-django.md  appendix-e-validation.md  ch01-domain-modeling.md  ch02-repository-pattern.md  ch03-coupling-and-abstractions.md  ch04-flask-api-service-layer.md  ch08-events-message-bus.md  ch09-going-to-town-message-bus.md  ch12-cqrs.md  index.md  part1-intro.md  part2-intro.md
src/adapters/: orm.py
src/allocation/adapters/: orm.py  repository.py
src/allocation/domain/: model.py
src/allocation/entrypoints/: api.py  flask_app.py
src/allocation/service_layer/: handlers.py  messagebus.py  services.py  unit_of_work.py
src/entrypoints/: api.py
tests/: conftest.py  fakes.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py  test_repository.py  test_uow.py  test_views.py
tests/unit/: test_handlers.py  test_model.py  test_repository.py  test_services.py
