[project]
name = "allocation"
version = "0.1.0"
description = "Architecture Patterns with Python - 실습 프로젝트"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "sqlalchemy>=1.4.0,<2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "requests>=2.31.0",
    "tenacity>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/allocation"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
