[project]
name = "sync"
version = "0.1.0"
description = "Architecture Patterns with Python - Chapter 03 Abstractions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["sync.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["."]
